@@ -22,7 +22,7 @@ spurt-file $contents, :$basename, :$dir";
 =head1 DESCRIPTION
 
 B<Bin::Utils> should be used by any module author who wants to provide
-the contents of the module's /resources directory to its users. It provides the
+the contents of a directory, file, or string to its users. It provides the
 following routines:
 
 =head3 slurp-file
@@ -77,7 +77,7 @@ Tom Browder <tbrowder@acm.org>
 
 =head1 COPYRIGHT AND LICENSE
 
-© 2024 Tom Browder
+© 2024-2025 Tom Browder
 
 This library is free software; you may redistribute it or modify it under the Artistic License 2.0.
 
