@@ -1,6 +1,10 @@
 Revision history for Bin::Utils
 
 {{$NEXT}}
+    - Tweak docs
+      + Remove reference to '/resources'
+    - Add test with a HERE string as contents to spurt
+    - Update copyright
 
 0.0.1  2024-10-27T15:51:52-05:00
     - Initial version
